[gd_scene load_steps=12 format=3 uid="uid://b16x1pvvx2uwj"]

[ext_resource type="FontFile" uid="uid://c3nwmhnn8yokv" path="res://assets/NotoSansJP-Light.ttf" id="1_lvlaj"]
[ext_resource type="Script" path="res://scenes/main/side_bar.gd" id="1_u4v8l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ou65y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ppx0c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bn0kc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_juugg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y71fo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_74t1m"]

[sub_resource type="Animation" id="Animation_5t5xa"]
resource_name = "sidebar_slide_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-360, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overlay:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5je7d"]
resource_name = "sidebar_slide_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-360, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overlay:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_udkxv"]
_data = {
"sidebar_slide_in": SubResource("Animation_5t5xa"),
"sidebar_slide_out": SubResource("Animation_5je7d")
}

[node name="SideBar" type="Node2D"]
script = ExtResource("1_u4v8l")

[node name="Overlay" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = 360.0
offset_right = 530.0
offset_bottom = 800.0
color = Color(0, 0, 0, 0.784314)

[node name="Menu" type="ColorRect" parent="."]
offset_left = 530.0
offset_right = 720.0
offset_bottom = 800.0
color = Color(0.0235294, 0.145098, 0.262745, 1)

[node name="Difficulty" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 176.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("1_lvlaj")
text = "Mode : NORMAL"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Launguage" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 14.0
offset_top = 64.0
offset_right = 175.0
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("1_lvlaj")
text = "Language"
horizontal_alignment = 2
vertical_alignment = 1

[node name="EN" type="Button" parent="Menu/Launguage"]
layout_mode = 0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.380392, 0.180392, 1)
theme_override_fonts/font = ExtResource("1_lvlaj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ou65y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ppx0c")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bn0kc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_juugg")
text = "English"
alignment = 2

[node name="JA" type="Button" parent="Menu/Launguage"]
layout_mode = 0
offset_top = 64.0
offset_right = 160.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.380392, 0.180392, 1)
theme_override_fonts/font = ExtResource("1_lvlaj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ou65y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ppx0c")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_y71fo")
theme_override_styles/focus = SubResource("StyleBoxEmpty_juugg")
text = "Japanese"
alignment = 2

[node name="BackToTitle" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 14.0
offset_top = 352.0
offset_right = 174.0
offset_bottom = 384.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.380392, 0.180392, 1)
theme_override_fonts/font = ExtResource("1_lvlaj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ou65y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ppx0c")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_74t1m")
theme_override_styles/focus = SubResource("StyleBoxEmpty_juugg")
text = "BACK TO TITLE"
alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_udkxv")
}

[connection signal="gui_input" from="Overlay" to="." method="_on_overlay_input"]
[connection signal="pressed" from="Menu/Launguage/EN" to="." method="_on_en_pressed"]
[connection signal="pressed" from="Menu/Launguage/JA" to="." method="_on_jp_pressed"]
[connection signal="pressed" from="Menu/BackToTitle" to="." method="_on_back_to_title_pressed"]
